working on being able to display tasks on a list. http://bit.ly/dXpBQr

--- a/web/index.html
+++ b/web/index.html
@@ -20,9 +20,9 @@
   <script type="text/javascript" src="app/models/Task.js"></script>  
 
   <script type="text/javascript" src="app/stores/Containers.js"></script>
-
-  <script type="text/javascript" src="app/controllers/main.js"></script>  
+  
   <script type="text/javascript" src="app/controllers/containers.js"></script>  
+  <script type="text/javascript" src="app/controllers/tasks.js"></script>
 </head>
 <body>
 </body>
